不要なディレクトリをGitから除外（ローカルのは残す）

--- a/TB02/TB-02/.gitignore
+++ b/TB02/TB-02/.gitignore
@@ -1,6 +1,10 @@
+# 上位ディレクトリの不要フォルダ
 ../../TB01/
-../../i4004/
 ../../nlp/
 ../../tanukiVer/
-../../販売用ファイル
-../../.
+
+# その他のローカル限定ファイル（スペースや全角文字注意）
+*.mp4
+*.png
+*.jpg
+
